# KyBao

./: .gitignore  README.md
KyBao/: CMakeLists.txt  CMakePresets.json
KyBao/KyBao/: CMakeLists.txt  KyBao.h  kbpch.cpp  kbpch.h
KyBao/KyBao-Editor/: CMakeLists.txt  EditorLayout.cpp  EditorLayout.h  KyBaoEditor.cpp
KyBao/KyBao-Editor/assets/shaders/: Texture_fs.glsl
KyBao/KyBao/KyBao/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Window.h
KyBao/KyBao/KyBao/Camera/: OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h
KyBao/KyBao/KyBao/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Timestep.h  Window.h
KyBao/KyBao/KyBao/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
KyBao/KyBao/KyBao/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
KyBao/KyBao/KyBao/Render/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Render2D.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
KyBao/KyBao/KyBao/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
KyBao/KyBao/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
KyBao/KyBao/Platform/Window/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
KyBao/KyBao/Platform/load/stb_image/: stb_image.cpp
KyBao/SandBox/: CMakeLists.txt  SandBox2D.cpp  SandBox2D.h  SandBoxApp.cpp  SandBoxAppRender.cpp
KyBao/SandBox/SandBox.dir/Debug/: SandBox.exe.recipe  SandBox.ilk  vc143.idb
KyBao/SandBox/SandBox.dir/Debug/SandBox.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  SandBox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
